--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@next/third-parties": "^15.1.7",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
@@ -20,7 +21,7 @@
     "framer-motion": "^11.16.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
-    "next": "14.2.16",
+    "next": "^15.1.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
