--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
     "next": "^15.3.2",
+    "next-intl": "^4.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
