--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@sendgrid/mail": "^8.1.4",
     "@sentry/nextjs": "^8.50.0",
+    "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.0",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.469.0",
     "next": "^15.3.2",
     "next-intl": "^4.1.0",
+    "nodemailer": "^7.0.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
