--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@next/third-parties": "^15.1.7",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.2",
     "@sendgrid/mail": "^8.1.4",
     "@sentry/nextjs": "^8.50.0",
